Added alias attribute for each policy

--- a/config/hotspot.conf
+++ b/config/hotspot.conf
@@ -10,7 +10,7 @@
 #
 # </Policy>
 
-<Policy location="Flinders Street Station" auto-forward="true" captive-portal="http://10.201.0.1:8002/captiveportal-pass3.html">
+<Policy location="Flinders Street Station" alias="fss" auto-forward="true" captive-portal="http://10.201.0.1:8002/captiveportal-pass3.html">
 
 	<Zone>
 		<Invocation-code>
@@ -41,7 +41,7 @@
 
 </Policy>
 
-<Policy location="Melbourne Central Station" auto-forward="true" captive-portal="http://10.202.0.1:8004/captiveportal-pass-mcs.html">
+<Policy location="Melbourne Central Station" alias="fss" auto-forward="true" captive-portal="http://10.202.0.1:8004/captiveportal-pass-mcs.html">
 
 	<Zone>
 		<Invocation-code>
