Modified a value of the alias attribute

--- a/config/hotspot.conf
+++ b/config/hotspot.conf
@@ -41,7 +41,7 @@
 
 </Policy>
 
-<Policy location="Melbourne Central Station" alias="fss" auto-forward="true" captive-portal="http://10.202.0.1:8004/captiveportal-pass-mcs.html">
+<Policy location="Melbourne Central Station" alias="mcs" auto-forward="true" captive-portal="http://10.202.0.1:8004/captiveportal-pass-mcs.html">
 
 	<Zone>
 		<Invocation-code>
